# data-agents

./: .gitignore  README.md  ag_daily_parameters.json  config.example.json  main.py  pyproject.toml
.github/workflows/: mac.yml  release.yml  ubuntu.yml  windows.yml
binder/: environment.yml
config/: example.router.json  example.router.yaml  example_with_nasa.router.json  gbif-occurrence.adapter.json  gbif-simple.adapter.json  gbif.adapter.json  httpbin.adapter.json  httpbin.rest.adapter.json  jsonplaceholder.adapter.json  jsonplaceholder.rest.adapter.json  nasa_power.adapter.json  nasapower-temporal-climatology.adapter.json  nasapower-temporal-daily.adapter.json  nasapower-temporal-hourly.adapter.json  nasapower-temporal-monthly.adapter.json  nasapower.adapter.json  nasapower.rest.adapter.json  openaq.adapter.json  openaq_custom.adapter.json  rest_countries.adapter.json  rest_countries.rest.adapter.json  router_example.yaml  sample_data.adapter.json
docs/: CLI_ROUTER_CONFIG.md  CUMULATIVE_NOTES.md  GITHUB_SECRETS_SETUP.md  REST_ADAPTER_AUTHENTICATION.md  RUNNING_NOTES.md
docs/notes-from-env-agents/: NASA-POWER.md
docs/reports/: status_update_13_Oct_2025.md  status_update_21_oct_2025.md  status_update_4_nov_2025.md
etc/ee/: example_get_info_from_feature_collection.json  example_get_info_from_image_collection.json  example_to_dict_get_info_from_feature_collection.json  example_to_dict_get_info_from_image_collection.json
etc/nasa/: README.md  all_daily_parameters.json  demo.json  example_usage.py  fetch_parameters.py  get_param_codes.py
etc/nasa_power_example/: README.md  datapackage.py  muri_coring_locations.csv  nasa_power_example.R  nasa_power_example.py
examples/: configurable_rest_example.py  nasa_power_example.py  openaq_example.py  openaq_integration_test.py  osm_overpass_example.py  rest_adapter_example.py  router_adapter_example.py  sample_data.csv  simple.ipynb  token_auth_example.py
src/data_agents/: __init__.py  __main__.py  cli.py  core.py  feature.py  feature_collection.py  filter.py  geometry.py  join.py
tests/: __init__.py  test_cli.py  test_cli_router_config.py  test_cli_router_openaq.py  test_data_agents.py  test_feature.py  test_feature_collection.py  test_filter.py  test_geometry.py  test_init.py  test_integration.py  test_join.py  test_openaq_integration.py  test_readme.py
tests/adapters/: test_gbif_occurrence_adapter.py  test_nasa_adapter.py  test_openapi_adapter.py  test_openaq_adapter.py  test_rest_adapter.py  test_rest_adapter_auth.py  test_tabular_adapter.py
tests/core/: test_adapter.py  test_router.py
tests/data/: test_errors.json
tests/fixtures/: nasa_openapi.json
tests/integration/: test_openaq_auth.py
(+15 files in other folders)
