[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-agents"
version = "0.1.0"
description = "Prototype for KBase external data integration."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Matt Dawson", email = "matt@cohere-llc.com"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "openapi-core>=0.19.5",
    "openapi3>=1.8.2",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.32.5",
]

[project.urls]
Homepage = "https://github.com/cohere-llc/data-agents"
Repository = "https://github.com/cohere-llc/data-agents"
Issues = "https://github.com/cohere-llc/data-agents/issues"

[project.scripts]
data-agents = "data_agents.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=4.1.0",
    "ruff>=0.13.3",
    "mypy>=1.0.0",
    "black>=23.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=4.1.0",
    "ruff>=0.13.3",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "pandas-stubs>=2.2.2.240807",
    "types-requests>=2.32.4.20250913",
    "types-pyyaml>=6.0.12.20250915",
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
]

[tool.hatchling.build.targets.wheel]
packages = ["src/data_agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert statements in tests

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
